Don't crash when using unshift on a states group

Amends 7e4b17943029b502cde63939a47f38ef900a9479, which implements
Array.unshift by first appending nullptrs, then replacing those with
the existing previous items, and then replacing the old positions (now
nullptr) with the items to be prepended.

This assumes that the append implementation of a list property accepts
nullptr items, which QQuickStateGroup's implementation didn't.

Note: QQuickStateGroupPrivate::append_transition also doesn't append
a nullptr, and it is likely that other list property implementations
also make append(nullptr) a no-op.

Fixes: QTBUG-114858
Change-Id: Ib0459c2d12be5deb42563b5298f840d8ba641930
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit f905876d6c3abda34dfd85cd40e300a31c1ebe52)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>